update like endpoint
