# src/routes/likereply.route.ts
@@ -9,7 +9,7 @@ import likereplyController from '../controllers/likereply.controller';
 router.use(rateLimit('likes'));
 
 router.get('/', likereplyController.getLikes);
-router.get('/::replyId', likereplyController.getLikesByReplyId);
+router.get('/:replyId', likereplyController.getLikesByReplyId);
 router.get('/:userId', likereplyController.getLikesByUserId);
 router.get('/:id', likereplyController.getLike);
 router.post('/', authCheck, likereplyController.createLike);
